# oa-guidance

./: .gitignore  README.md  environment.yml  manifest.txt  pyproject.toml
scripts/: generate_ecs.py  generate_enzymes.py
src/oag/: constants.py  data.py  eval.py  guidance.py  logging.py  models.py  sampling.py  utils.py
